# pdb2pqr

./: .gitattributes  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog.md  LICENSE.md  MANIFEST.in  README.md  pdb2pka  pdb2pqr.py  precheck.sh  precommit.sh  pyproject.toml  requirements.txt  ruff_essential.toml  setup.cfg  setup.py
.github/workflows/: check-styles.yml  get_version.yml  python-package.yml
docs/: api.rst  changelog.rst  conf.py  extending.rst  getting.rst  help.rst  index.rst  releases.rst  requirements.txt  supporting.rst  using.rst
docs/api/: aa.rst  biomolecule.rst  config.rst  debump.rst  definitions.rst  hydrogens.rst  index.rst  io.rst  ligand.rst  main.rst  pdb.rst  protein.rst  psize.rst  structures.rst  topology.rst
docs/formats/: index.rst  xml-names.rst
docs/source/: conf.py  extending.rst  getting.rst  help.rst  index.rst  releases.rst
docs/source/api/: biomolecule.rst  cells.rst  cif.rst  config.rst  forcefield.rst  index.rst  inputgen.rst  na.rst  quatfit.rst  residue.rst  run.rst  utilities.rst
docs/source/formats/: dat.rst  index.rst  mol2.rst  xml-names.rst
docs/source/using/: algorithms.rst  examples.rst  index.rst  other-software.rst
docs/using/: algorithms.rst  examples.rst  index.rst
pdb2pqr/: __init__.py  __main__.py  _version.py  aa.py  biomolecule.py  cells.py  cif.py  config.py  debump.py  definitions.py  forcefield.py  input_output.py  inputgen.py  io.py  main.py  na.py  pdb.py  protein.py  psize.py  quatfit.py  residue.py  run.py  structures.py  topology.py  utilities.py
pdb2pqr/dat/: AA.xml  AMBER.names  FASP.joblib  FGLU.joblib  FHIS.joblib  FLYS.joblib  FTYR.joblib  HYDROGENS.xml  NA.xml  PATCHES.xml  TOPOLOGY.xml
pdb2pqr/hydrogens/: __init__.py  optimize.py  structures.py
pdb2pqr/ligand/: __init__.py  mol2.py  peoe.py  topology.py
pdb2pqr/pdb2pka/: apbs.py  pKaIO_compat.py  pKa_base.py  pKa_utility_functions_compat.py  pka.py  pka_help.py  pka_old.py  pka_routines.py
pdb2pqr/pdb2pka/graph_cut/: create_titration_output.py  graph.py  uncertainty.py  utils.py
pdb2pqr/pdbx/: __init__.py
pdb2pqr/pdbx/reader/: PdbxContainers.py  PdbxParser.py  PdbxReadWriteTests.py  PdbxReader.py  PdbxReaderTests.py
pdb2pqr/pdbx/writer/: PdbxWriter.py  PdbxWriterTests.py
pdb2pqr/pkaani/: README.md  __init__.py  __main__.py  ani_descriptors.py  ase_io_proteindatabank_mod.py  pkaani.py  prep_pdb.py  run.py
tests/: README.md  common.py  core_test.py  io_test.py  lengthy_basic_test.py  ligand_results.py  ligand_test.py  logging_test.py  patches_test.py  pkaani_test.py  propka_test.py  regression_test.py  short_basic_test.py  sphinx_test.py  test_version.py
tests/data/: 1A1P_assign-only_whitespace_ff=AMBER.pqr  1AFS_apbs-input_include-header_whitespace_ff=AMBER.pqr  1AFS_chain_whitespace_ff=AMBER.pqr  1AFS_drop-water_ff=AMBER.pqr  1AFS_ff=AMBER.pqr  1AFS_neutralc_neutraln_whitespace_ff=PARSE.pqr  1AFS_nodebump_noopt_whitespace_ff=AMBER.pqr  1AFS_pka.csv  1AFS_userff_usernames_whitespace.pqr  1AFS_whitespace_ff=AMBER.pqr  1AFS_whitespace_ff=CHARMM.pqr  1AFS_whitespace_ff=PARSE.pqr  1AFS_whitespace_ff=PEOEPB.pqr  1AFS_whitespace_ff=SWANSON.pqr  1AFS_whitespace_ff=TYL06.pqr  1AJJ_pH14_AMBER.pqr  1AJJ_pH14_CHARMM.pqr  1AJJ_pH14_PARSE.pqr  1AJJ_pH14_SWANSON.pqr  1AJJ_pH14_TYL06.pqr  1AJJ_pH2_AMBER.pqr  1AJJ_pH2_CHARMM.pqr  1AJJ_pH2_PARSE.pqr  1AJJ_pH2_SWANSON.pqr  1AJJ_pH2_TYL06.pqr  1AJJ_pH7_AMBER.pqr  1AJJ_pH7_PARSE.pqr  1AJJ_pH7_SWANSON.pqr  1AJJ_pH7_TYL06.pqr  1BX8_pH14_AMBER.pqr  1BX8_pH14_CHARMM.pqr  1BX8_pH14_PARSE.pqr  1BX8_pH14_SWANSON.pqr  1BX8_pH14_TYL06.pqr  1BX8_pH2_AMBER.pqr  1BX8_pH2_CHARMM.pqr  1BX8_pH2_PARSE.pqr  1BX8_pH2_SWANSON.pqr  1BX8_pH2_TYL06.pqr  1BX8_pH7_AMBER.pqr  (+18 more)
tests/pkaani_tests/: 1FCC.pdb_pka.csv  1brs.pqr  1brs_clean.pdb_pka.csv  1brs_propka.pqr  1zy8_clean.pdb_pka.csv  6oge_de.pdb_pka.csv  pkaani_min_test_FINAL.out  pkaani_out.txt  req.py  test_pHs_big_pdb.sh  test_pHs_mini_pdb.sh  test_pHs_pkaani.sh  test_pHs_pkaani_1brs.sh  test_pHs_pkaani_6oge.sh  test_pHs_pkaani_propka.py  test_pHs_pkaani_propka.sh
tools/: dx2cube.py
